[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chloros-blog-mcp"
version = "1.0.0"
description = "MCP server for automated orthopedic blog article creation"
authors = [{name = "Dr. Georgios Chloros", email = "info@chloros.gr"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "asyncio-throttle>=1.0.2",
    "openai>=1.0.0",
    "pinecone-client>=3.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "markdown>=3.4.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.2.0",
]

[project.scripts]
chloros-blog-mcp = "src.main:main"
